--- a/src/App.css
+++ b/src/App.css
@@ -102,6 +102,7 @@ button {
   text-align: center;
   font-weight: bold;
   line-height: 1;
+  opacity: 0.8;
 }
 
 .controls > button {
@@ -150,6 +151,7 @@ button {
   border: none;
   border-radius: 4px;
   color: white;
+  opacity: 0.8;
 }
 
 .layers > button:hover {
@@ -175,6 +177,7 @@ button {
   font-weight: normal;
   line-height: 1;
   background-color: #282c34;
+  opacity: 0.8;
   border-radius: 4px;
 }
 
